# Email_Security-Prototype-

./: Cargo.toml  README.md  codebase_analysis.md  mock_smtp.py  report.html  report.json  result.html  result.json
.cargo/: config.toml
src/: analyzer.rs  dns.rs  email_parser.rs  main.rs  models.rs  parser.rs  report.rs  spoof.rs
templates/: report.html
