[package]
name = "email_security"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
hickory-resolver = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
askama = "0.12"
indicatif = "0.17"
console = "0.15"
thiserror = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
